--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint",
     "test": "jest",
-    "lint": "next lint"
+    "codegen": "contentful-typescript-codegen --output models/contentful/generated/contentful.d.ts"
   },
   "dependencies": {
     "@next/font": "13.1.6",
     "contentful": "^9.3.2",
+    "contentful-management": "^10.29.1",
+    "dotenv": "^16.0.3",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -26,6 +29,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "autoprefixer": "^10.4.13",
+    "contentful-typescript-codegen": "^3.4.0",
     "eslint": "^8.33.0",
     "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.6.0",
@@ -41,6 +45,7 @@
     "prettier": "^2.8.4",
     "tailwindcss": "^3.2.6",
     "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "4.9.5"
   }
 }
