--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "contentful-management": "^10.29.1",
     "dotenv": "^16.0.3",
     "next": "13.1.6",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5"
