--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.0.3",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
