Added notion service and notion env variables

--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,7 @@
 NEXT_PUBLIC_CONTENTFUL_SPACE_ID=space_id
 NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN=access_token
+
+NEXT_PUBLIC_NOTION_AUTH_TOKEN=auth_token
+
+NEXT_PUBLIC_NOTION_BLOGS_DATABASE_ID=database_id
+NEXT_PUBLIC_NOTION_PROJECTS_DATABASE_ID=database_id
