Added Seo database id

--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,4 @@ NEXT_PUBLIC_NOTION_AUTH_TOKEN=auth_token
 
 NEXT_PUBLIC_NOTION_BLOGS_DATABASE_ID=database_id
 NEXT_PUBLIC_NOTION_PROJECTS_DATABASE_ID=database_id
+NEXT_PUBLIC_NOTION_SEO_DATABASE_ID=database_id
