--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "@types/react-redux": "^7.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "autoprefixer": "^10.4.13",
     "contentful-typescript-codegen": "^3.4.0",
@@ -42,6 +41,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "jest": "^29.4.2",
