Modified env dist

--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,7 @@
 NEXT_PUBLIC_CONTENTFUL_SPACE_ID=space_id
 NEXT_PUBLIC_CONTENTFUL_ACCESS_TOKEN=access_token
+NEXT_PUBLIC_CONTENTFUL_MANAGEMENT_ACCESS_TOKEN=access_token
+NEXT_PUBLIC_CONTENTFUL_ENVIRONMENT=environment
 
 NEXT_PUBLIC_NOTION_AUTH_TOKEN=auth_token
 
