--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
     "singleQuote": true,
     "jsxSingleQuote": true,
     "trailingComma": "es5",
-    "endOfLine": "crlf"
+    "endOfLine": "auto"
 }
   
