--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "dotenv": "^16.0.3",
     "next": "13.1.6",
     "next-redux-wrapper": "^8.1.0",
+    "notion-to-md": "^2.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-markdown": "^8.0.7",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
